[gd_scene load_steps=5 format=3 uid="uid://c3xknhixya5sn"]

[ext_resource type="Script" uid="uid://wfmgmxm8gjj1" path="res://Scripts/Input.gd" id="1_rnog4"]
[ext_resource type="SpriteFrames" uid="uid://cbf2gkb3570ug" path="res://Resources/sprites/box.tres" id="2_sa144"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pq8q7"]
size = Vector2(6, 6)

[sub_resource type="LabelSettings" id="LabelSettings_vvh5c"]
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="ConveyorInput" type="Area2D"]
script = ExtResource("1_rnog4")
metadata/_edit_group_ = true

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_sa144")
frame = 1
frame_progress = 0.89139694

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_pq8q7")

[node name="Score" type="HBoxContainer" parent="."]
layout_direction = 2
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -39.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0

[node name="TargetLabel" type="Label" parent="Score"]
layout_mode = 2
text = "1"
label_settings = SubResource("LabelSettings_vvh5c")
vertical_alignment = 1

[node name="DepoLabel" type="Label" parent="Score"]
layout_mode = 2
text = "0/3"
label_settings = SubResource("LabelSettings_vvh5c")
vertical_alignment = 1
